--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -32,7 +32,7 @@ server {
 # server {
 #     listen 80;
 #     server_name localhost;
-#     client_max_body_size 100M;
+    client_max_body_size 100M;
 #     # Add debug headers
     add_header X-Debug-Message "Request processed by Nginx" always;
     # Auth service endpoints
