--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     depends_on:
       - auth-service
     volumes:
-      - ./nginx/conf:/etc/nginx/conf.d
+      - ./nginx/conf:/etc/nginx/conf
       - ./nginx/certs:/etc/nginx/certs
     networks:
       - public_network
