--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -20,5 +20,6 @@ http {
     sendfile on;
     keepalive_timeout 65;
     
-    include /etc/nginx/conf/*.conf;
+    # Include all site configurations
+    include /etc/nginx/conf.d/*.conf;
 }
